@@ -30,6 +30,7 @@ $ -> Language fix or change
  + [#28067] Option to disable the ability to change the Username in Profile
  + [#24510] Implementation of Terms of Service. Thanks Peter.
  + [#28614] Add option to enable/disable logging in Smart Search. Thanks Michael.
+ # [#28615] Backport union query element from Platform 12 and use it in Smart Search. Thanks Michael.
 
 03-Jun-2012 Mark Dexter
  ^ [#28450] Set the CSS class for JForm field label. Thanks Viet Vu.
